Update main branch with latest files from fix/csp-violations

--- a/public/index.html
+++ b/public/index.html
@@ -52,15 +52,15 @@
     </div>
     <div class="header_navContainer__6afui">
         <ul class="header_nav__G2Gk3">
-        <li class="desktop-only-button"><a href="/login.html" class="button-link_link__eTf8F">התחברות</a></li>
-        <li class="desktop-only-button"><a href="/register.html" class="button-link_link__eTf8F button-link_white__cMMvJ">יאללה מצטרפים !</a></li>
+            <li class="desktop-only-button"><a href="/login.html" class="button-link_link__eTf8F">התחברות</a></li>
+            <li class="desktop-only-button"><a href="/register.html" class="button-link_link__eTf8F button-link_white__cMMvJ">יאללה מצטרפים !</a></li>
 
             <li>
                 <div class="button-more-dropdown_container__hvZkG">
                     <button class="header_triggerButton__2Ei4o" type="button" title="See more options"><span class="icon_icon__XRrd8">more_vert</span></button>
                     <div class="button-more-dropdown_dropdownContainer__s0SG9" style="display: none;">
-                    <a href="#" class="button-more-dropdown_dropdownLink__AHVUX mobile-only-menu-item"><span>התחברות</span></a>
-                    <a href="#" class="button-more-dropdown_dropdownLink__AHVUX mobile-only-menu-item"><span>יאללה מצטרפים !</span></a>
+                        <a href="#" class="button-more-dropdown_dropdownLink__AHVUX mobile-only-menu-item"><span>התחברות</span></a>
+                        <a href="#" class="button-more-dropdown_dropdownLink__AHVUX mobile-only-menu-item"><span>יאללה מצטרפים !</span></a>
                         <a href="#" class="button-more-dropdown_dropdownLink__AHVUX"><span>About</span></a>
                         <a href="#" class="button-more-dropdown_dropdownLink__AHVUX"><span>Help</span></a>
                         <a href="#" class="button-more-dropdown_dropdownLink__AHVUX"><span>Send Feedback</span></a>
@@ -74,7 +74,7 @@
     <section id="hero" class="hero_hero__Q3Rx9">
         <div class="hero_heroContent__RP_uf">
             <div class="hero_descriptionAndCta__SI8HO">
-            <a href="javascript:void(0);" class="button-link_link__eTf8F hero_cta__osRfk"><span>מערכת לסטודנטים</span></a>
+                <a href="javascript:void(0);" class="button-link_link__eTf8F hero_cta__osRfk"><span>מערכת לסטודנטים</span></a>
                 <a href="#file-drop-section" class="button-link_link__eTf8F hero_cta__osRfk"><span>הפצת קו"ח</span></a>
             </div>
             <div class="hero_flowEffect__OYVu0">
@@ -131,6 +131,7 @@
             <p>גררו לכאן את קובץ קורות החיים או לחצו לבחירה</p>
             <input type="file" id="file-input" multiple style="display: none;">
         </div>
+        <p id="upload-error" class="upload-error-message" style="display: none;"></p>
     </section>
     <section class="capabilities_capabilities__YQVQ2" id="capabilities" data-section="capabilities">
         <div class="capabilities_contentContainer___jHRx">
